Adjust tile max-width to avoid overscaling when tiles wrap

--- a/_assets/stylesheets/_tiles.scss
+++ b/_assets/stylesheets/_tiles.scss
@@ -49,6 +49,7 @@
   }
   @media (min-width: $small) {
     width: 25%;
+    max-width: 350px;
   }
   &:hover {
     img {
